--- a/app.json
+++ b/app.json
@@ -20,7 +20,11 @@
     "pages/timePicker/timePicker",
     "pages/exclusiveChooseSN/exclusiveChooseSN",
     "pages/chooseInstrument/chooseInstrument",
-    "pages/problemDescription/problemDescription"
+    "pages/problemDescription/problemDescription",
+    "pages/manageCustomer/index",
+    "pages/detailCustomer/index",
+    "pages/manageAddInstrument/index",
+    "pages/tagsLog/index"
   ],
   "window": {
     "navigationBarTitleText": "Color UI",
